--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.2",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "knex": "^1.0.1",
-    "pg": "^8.7.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   },
   "description": ""
 }
